These slides are ready

--- a/week_10/polish/slides_polish.Rmd
+++ b/week_10/polish/slides_polish.Rmd
@@ -146,10 +146,11 @@ Advisor:
 * I hate these colors.  
 * This won't work in black and white  
 
-##Three places to polish figures  
-* In `aes` - you may want to add `shape`
-* As a `gg`  
-* Change `theme` components 
+##Three points on polishing  
+* `aes`
+* `gg`  
+* `theme`
+* none of the above  
 
 ##
 ```{r}
@@ -161,7 +162,7 @@ ggplot(both, aes(x=year, y=acres, group=crop, color=crop, shape=crop))+
 ## 
 ```{r}
 ggplot(both, aes(x=year, y=acres, group=crop, color=crop, shape=crop))+
-  geom_point()+
+  geom_point(size=3, alpha = .6)+
   geom_smooth()+
   ggtitle("Acres of small grains and soybeans in Iowa")
 ```
@@ -170,7 +171,7 @@ ggplot(both, aes(x=year, y=acres, group=crop, color=crop, shape=crop))+
 ```{r}
 theme_set(theme_bw())
 ggplot(both, aes(x=year, y=acres, group=crop, color=crop, shape=crop))+
-  geom_point()+
+  geom_point(size=3, alpha = .6)+
   geom_smooth()+
   ggtitle("Acres of small grains and soybeans in Iowa")
 ```
@@ -179,14 +180,14 @@ ggplot(both, aes(x=year, y=acres, group=crop, color=crop, shape=crop))+
 library(scales)
 theme_set(theme_bw())
 ggplot(both, aes(x=year, y=acres, group=crop, color=crop, shape=crop))+
-  geom_point()+
+  geom_point(size=3, alpha = .6)+
   geom_smooth()+
   ggtitle("Acres of small grains and soybeans in Iowa")+
   scale_y_continuous(labels = comma)
 ```
 
 ##
-```{r, results = "hide"}
+```{r, eval=FALSE}
 theme_set(theme_bw())
 ggplot(both, aes(x=year, y=acres, group=crop, color=crop, shape=crop))+
   geom_point(size=3, alpha = .6)+
@@ -238,6 +239,7 @@ my_theme<-theme_bw()+
           axis.line = element_line(),
           legend.position=c(.27,.84), legend.title=element_blank(),
 		      legend.text = element_text(size=20),legend.key.size=unit(1, "cm"),
+		      plot.title = element_text(size = 22, face = "bold"),
 		      axis.title.x = element_text(size=22,vjust=-0.5),
           axis.title.y = element_text(size=22,angle=90),
           axis.text.x = element_text(colour="black", size=20),
@@ -255,15 +257,203 @@ ggplot(both, aes(x=year, y=acres, group=crop, color=crop, shape=crop))+
 labs(x = "Year",y = "Acres Planted")
 ```
 
-##How  
-specific commands  
-  axes  
-  legends  
-  alpha, color, size, shape, text, 
-themes  
+```{r}
+theme_set(my_theme)
+ggplot(both, aes(x=year, y=acres, group=crop, color=crop, shape=crop))+
+  geom_point(size=3, alpha = .6)+
+  geom_smooth()+
+  ggtitle("Acres of small grains and soybeans in Iowa")+
+  scale_y_continuous(labels = comma)+
+labs(x = "Year",y = "Acres Planted")+
+  scale_color_discrete(name="Crop",
+                         breaks=c("smlgrains", "soybeans"),
+                         labels=c("Small Grains", "Soybeans"))+
+  scale_shape_discrete(name="Crop",
+                         breaks=c("smlgrains", "soybeans"),
+                         labels=c("Small Grains", "Soybeans"))
+```
 
-##Common theme changes  
-##Colors  
-##Grid  vs facet  
 ##
+```{r, eval=FALSE}
+theme_set(my_theme)
+ggplot(both, aes(x=year, y=acres, group=crop, color=crop, shape=crop))+
+  geom_point(size=3, alpha = .6)+
+  geom_smooth()+
+  ggtitle("Acres of small grains and soybeans in Iowa")+
+  scale_y_continuous(labels = comma)+
+labs(x = "Year",y = "Acres Planted")+
+  scale_color_discrete(name="Crop",
+                         breaks=c("smlgrains", "soybeans"),
+                         labels=c("Small Grains", "Soybeans"))+
+  scale_shape_discrete(name="Crop",
+                         breaks=c("smlgrains", "soybeans"),
+                         labels=c("Small Grains", "Soybeans"))
+```
 
+##
+```{r, echo=FALSE}
+theme_set(my_theme)
+ggplot(both, aes(x=year, y=acres, group=crop, color=crop, shape=crop))+
+  geom_point(size=3, alpha = .6)+
+  geom_smooth()+
+  ggtitle("Acres of small grains and soybeans in Iowa")+
+  scale_y_continuous(labels = comma)+
+labs(x = "Year",y = "Acres Planted")+
+  scale_color_discrete(name="Crop",
+                         breaks=c("smlgrains", "soybeans"),
+                         labels=c("Small Grains", "Soybeans"))+
+  scale_shape_discrete(name="Crop",
+                         breaks=c("smlgrains", "soybeans"),
+                         labels=c("Small Grains", "Soybeans"))
+```
+
+##
+```{r, echo=FALSE}
+theme_set(my_theme)
+ggplot(both, aes(x=year, y=acres, group=crop, color=crop, shape=crop))+
+  geom_point(size=3, alpha = .6)+
+  geom_smooth()+
+  ggtitle("Acres of small grains and soybeans in Iowa")+
+  scale_y_continuous(labels = comma)+
+labs(x = "Year",y = "Acres Planted")+
+  scale_color_discrete(name="Crop",
+                         breaks=c("smlgrains", "soybeans"),
+                         labels=c("Small Grains", "Soybeans"))+
+  scale_shape_discrete(name="Crop",
+                         breaks=c("smlgrains", "soybeans"),
+                         labels=c("Small Grains", "Soybeans"))
+```
+
+##Many options to save figures
+```{r, eval=FALSE}
+ggsave("changes.pdf", plot=cropfig)
+```
+or
+```{r, eval=FALSE}
+pdf(file="changes.pdf", height=600, width=600)  
+cropfig  
+dev.off()
+```
+
+Can save in many formats -- .png, .tiff, .jpg, etc. 
+
+#Colors 
+
+
+## Gradients
+
+Qualitative schemes: no more than 7 colors
+
+```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.width=7, fig.height=1.5}
+library(RColorBrewer)
+library(gridExtra)
+new_theme_empty <- theme_bw()
+new_theme_empty$line <- element_blank()
+new_theme_empty$rect <- element_blank()
+new_theme_empty$strip.text <- element_blank()
+new_theme_empty$axis.text <- element_blank()
+new_theme_empty$plot.title <- element_blank()
+new_theme_empty$axis.title <- element_blank()
+new_theme_empty$plot.margin <- structure(c(0, 0, -1, -1), unit = "lines", valid.unit = 3L, class = "unit")
+data <- data.frame(x = 1:7, 
+                   blues = brewer.pal(7, "Blues"), 
+                   set1 = brewer.pal(7, "Set1"), 
+                   diverge = brewer.pal(7,"RdBu"))
+
+qplot(xmin = x-.5, xmax = x+.5, ymin = 0, ymax = 1, data = data, geom = "rect", color = I("black"), fill = set1) + 
+    scale_fill_identity() + 
+    ylab("") + 
+    xlab("") + 
+    theme(axis.text = element_blank(), 
+          axis.ticks = element_blank(), 
+          rect = element_blank()) + 
+    coord_fixed(ratio = 1) + 
+    new_theme_empty
+```
+
+Quantitative schemes: use color gradient with only one hue for positive values
+
+```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.width=7, fig.height=1.5}
+qplot(xmin = x-.5, xmax = x+.5, ymin = 0, ymax = 1, data = data, geom = "rect", color = I("black"), fill = blues) + 
+    scale_fill_identity() + 
+    ylab("") + 
+    xlab("") + 
+    theme(axis.text = element_blank(), 
+          axis.ticks = element_blank(), 
+          rect = element_blank()) + 
+    coord_fixed(ratio = 1) + 
+    new_theme_empty
+```
+
+## More Gradients
+
+Quantitative schemes: use color gradient with two hues for positive and negative values. Gradient should go through a light, neutral color (white)
+
+```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.width=7, fig.height=1.5}
+qplot(xmin = x-.5, xmax = x+.5, ymin = 0, ymax = 1, data = data, geom = "rect", color = I("black"), fill = diverge) + 
+    scale_fill_identity() + 
+    ylab("") + 
+    xlab("") + 
+    theme(axis.text = element_blank(), 
+          axis.ticks = element_blank(), 
+          rect = element_blank()) + 
+    coord_fixed(ratio = 1) + 
+    new_theme_empty
+```
+
+Small objects or thin lines need more contrast than larger areas
+
+## RColorBrewer
+
+R package based on [Cynthia Brewer's color schemes](http://www.colorbrewer2.org)
+```{r, echo=FALSE, fig.width=7, fig.height=6}
+display.brewer.all()
+```
+
+## Color in `ggplot2`
+
+- Factor variable:
+    - `scale_colour_discrete`
+    - `scale_colour_brewer(palette = ...)`
+- Continuous variable:
+    - `scale_colour_gradient` (define low, high values)
+    - `scale_colour_gradient2` (define low, mid, and high values)
+    - Equivalents for fill: `scale_fill_...`
+
+## 
+
+```{r, eval=FALSE}
+ggplot(both, aes(x=year, y=acres, group=crop, color=crop, shape=crop))+
+  geom_point(size=3, alpha = .6)+
+  geom_smooth()+
+  ggtitle("Acres of small grains and soybeans in Iowa")+
+  scale_y_continuous(labels = comma)+
+labs(x = "Year",y = "Acres Planted")+
+  scale_color_brewer(name="Crop",
+                         breaks=c("smlgrains", "soybeans"),
+                         labels=c("Small Grains", "Soybeans"), palette="Set1")+
+  scale_shape_discrete(name="Crop",
+                         breaks=c("smlgrains", "soybeans"),
+                         labels=c("Small Grains", "Soybeans"))
+```
+
+## 
+```{r, echo=FALSE}
+ggplot(both, aes(x=year, y=acres, group=crop, color=crop, shape=crop))+
+  geom_point(size=3, alpha = .6)+
+  geom_smooth()+
+  ggtitle("Acres of small grains and soybeans in Iowa")+
+  scale_y_continuous(labels = comma)+
+labs(x = "Year",y = "Acres Planted")+
+  scale_color_brewer(name="Crop",
+                         breaks=c("smlgrains", "soybeans"),
+                         labels=c("Small Grains", "Soybeans"), palette="Set1")+
+  scale_shape_discrete(name="Crop",
+                         breaks=c("smlgrains", "soybeans"),
+                         labels=c("Small Grains", "Soybeans"))
+```
+
+##Great places to look up what you need (all included by Google)  
+* [ggplot2 documentation](http://docs.ggplot2.org/current/)
+* [Beautiful plotting in R](http://zevross.com/blog/2014/08/04/beautiful-plotting-in-r-a-ggplot2-cheatsheet-3/)
+* [R Graphics Cookbook](http://www.cookbook-r.com/Graphs/)
