--- a/week_11/dynamic_concepts/slides_concepts.Rmd
+++ b/week_11/dynamic_concepts/slides_concepts.Rmd
@@ -46,7 +46,7 @@ When I was playing Oregon Trail, people were planning ways to tie together their
 <center><img src="images/oregontrail.png" width="400px"/></center>  
 Probably so they could keep track of their Oregon Trail successes and failures.  
 
-## Statistical Analyses and Reproducible Research  
+## [Statistical Analyses and Reproducible Research](http://biostats.bepress.com/cgi/viewcontent.cgi?article=1001&context=bioconductor)  
   Gentleman and Lang, 2004  
 <center><img src="images/thegentlemen.gif" width="600px"/></center>  
 
@@ -112,7 +112,17 @@ Gentleman and Lang define a dynamic document as an ordered composition of code c
 * Interactivity  
 * Metadata  
 
-##
+## What are some barriers to the creation and use of compendiums and dynamic documents?  
+* In general  
+* For you personally  
+
+## Challenge! { .cover .white }
+
+<!-- image source https://www.flickr.com/photos/ollemhebb/16691684354/in/photolist-rqZfeh-dB2HGy-j4rtWV-cswQCb-bnmKUX-rurYD7-5vmdw6-7iHPtj-bvggjZ-7nwAyK-oVZdhD-acwkds-dqAf8f-e4z5Jk-6PBenY-dSAYZ9-5vmcGR-e4z7be-cyGrpE-7WLPaw-5vmdnn-8ciEWU-5vmcDa-o2NbGq-dxpJTW-cyGt4d-dZy9Sm-dZssjK-oVZ3SB-5BtrCp-e4z5Mk-6bvjNs-8cfk5H-dzTiW2-7Yfj3T-9mraHV-5XmJTS-aDtnzj-ruXg4M-ecF3x2-aAU6Fg-bsQosb-Hgh9UM-kJti5g-ifdCE4-ceXXhf-7AdkFZ-aEDYpr-otaizi-sa1Phn -->
+<img src="images/your_turn.jpg" class="cover height" />
 
 
+<p style="color:black">
+<p>Find an article published with a compendium or dynamic document in your discipline. </p> 
+</p>  
 
