--- a/week_14/model_basics/slides_model_basics.Rmd
+++ b/week_14/model_basics/slides_model_basics.Rmd
@@ -1,7 +1,7 @@
 ---
-title: "Making Slides"
+title: "Modeling Basics"
 author: "Ranae Dietzel and Andee Kaplan"
-date: "November 4, 2016"
+date: "November 28, 2016"
 ratio: 16x10
 output:
   rmdshower::shower_presentation:
@@ -10,9 +10,9 @@ output:
     theme: ribbon
 ---
 
-##Models 
+##Modeling Basics 
 
-<center><img src="images/inception_top.gif" width="800px"/></center>
+<center><img src="images/model.gif" width="800px"/></center>
 
 ##Why model?  
 * Modeling helps you identify trends, make predictions, and perform statistical tests  
@@ -203,27 +203,126 @@ ggplot(sim1, aes(x, y)) +
   geom_abline(intercept = best$par[1], slope = best$par[2])
 ```
 
+## Visualizing models  
+* Predictive models provide predicted data (obviously)  
+* These data can be added to a dataframe and then treated like any other data  
 
+## Predictions
 
+To visualise the predictions from a model, we start by generating an evenly spaced grid of values that covers the region where our data lies. The easiest way to do that is to use `modelr::data_grid()`. Its first argument is a data frame, and for each subsequent argument it finds the unique variables and then generates all combinations:
 
+```{r}
+grid <- sim1 %>% 
+  data_grid(x) 
+grid
+```  
 
+## Predictions  
+Next we add predictions. We'll use `modelr::add_predictions()` which takes a dataframe and a model. It adds the predictions from the model to a new column in the dataframe:
 
+```{r, echo=FALSE}
+sim1_mod <- lm(y ~ x, data = sim1)
+coef(sim1_mod)
+```
 
+```{r}
+grid <- grid %>% 
+  add_predictions(sim1_mod) 
+grid
+```
 
+(You can also use this function to add predictions to your original dataset.)
+  
+## 
+```{r}
+ggplot(sim1, aes(x)) +
+  geom_point(aes(y = y)) +
+  geom_line(aes(y = pred), data = grid, colour = "red", size = 1)
+```  
 
+## Residuals
 
+The flip-side of predictions are __residuals__. The predictions tells you the pattern that the model has captured, and the residuals tell you what the model has missed. The residuals are just the distances between the observed and predicted values that we computed above.
 
+## Residuals
 
+We add residuals to the data with `add_residuals()`, which works much like `add_predictions()`. Note, however, that we use the original dataset, not a manufactured grid. This is because to compute residuals we need actual y values.
 
+```{r}
+sim1 <- sim1 %>% 
+  add_residuals(sim1_mod)
+sim1
+```  
 
+## Residuals  
+Drawing a frequency polygon helps us understand the spread of the residuals:
 
+```{r, fig.height = 4, fig.width = 6}
+ggplot(sim1, aes(resid)) + 
+  geom_freqpoly(binwidth = 0.5)
+```
 
+##  
+You'll often want to recreate plots using the residuals instead of the original predictor.
 
-## Your turn { .cover .white }
+```{r, fig.height = 4, fig.width = 6}
+ggplot(sim1, aes(x, resid)) + 
+  geom_ref_line(h = 0) +
+  geom_point() 
+```
 
-<img src="images/your_turn.jpg" class="cover height" />
+This looks like random noise, suggesting that our model has done a good job of capturing the patterns in the dataset.
 
-<p style="color:black">
-<p>Alter your slides by highlighting some of the code.</p> 
-<p>Add an image and adjust the size and center the image using html..</p> 
-<p>Make notes for a few slides and try out presenter mode.</p>  
+##`model_matrix`  
+Takes a dataframe and a formula and returns a tibble that defines the model equation: each column in the output is associated with one coefficient in the model. 
+
+##  
+```{r}
+df <- tribble(
+  ~y, ~x1, ~x2,
+  4, 2, 5,
+  5, 1, 6
+)
+model_matrix(df, y ~ x1)
+```
+
+##   
+The model matrix grows in an unsurprising way when you add more variables to the the model:
+
+```{r}
+model_matrix(df, y ~ x1 + x2)
+```  
+
+## Categorical variables
+
+Generating a function from a formula is straight forward when the predictor is continuous, but things get a bit more complicated when the predictor is categorical. Imagine you have a formula like `y ~ sex`, where sex could either be male or female. It doesn't make sense to convert that to a formula like `y = x_0 + x_1 * sex` because `sex` isn't a number - you can't multiply it! Instead what R does is convert it to `y = x_0 + x_1 * sex_male` where `sex_male` is one if `sex` is male and zero otherwise:
+
+## Categorical variables  
+Here's the `sim2` dataset from modelr:
+
+```{r, fig.width = 6, fig.height=4}
+ggplot(sim2) + 
+  geom_point(aes(x, y))
+```
+
+## Categorical variables
+We can fit a model to it, and generate predictions:
+
+```{r}
+mod2 <- lm(y ~ x, data = sim2)
+
+grid <- sim2 %>% 
+  data_grid(x) %>% 
+  add_predictions(mod2)
+grid
+```
+
+## 
+Effectively, a model with a categorical `x` will predict the mean value for each category:
+
+```{r, fig.width = 6, fig.height=4}
+ggplot(sim2, aes(x)) + 
+  geom_point(aes(y = y)) +
+  geom_point(data = grid, aes(y = pred), colour = "red", size = 4)
+```  
+
